--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "7.0.0",
     "autoprefixer": "^10.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.4.5",
