--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9",
     "postcss": "^7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "register-service-worker": "^1.7.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/node": "^17.0.5",
     "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "7.0.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
     "autoprefixer": "^10.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.4.5",
