--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@types/vue-router": "^2.0.0",
+    "@vue/compiler-sfc": "^3.2.26",
     "autoprefixer": "^9",
     "postcss": "^7",
     "register-service-worker": "^1.7.1",
